@@ -33,6 +33,8 @@ cvl_frame_t *cvl_filter_mean(const cvl_frame_t *frame, int k_h, int k_v);
 cvl_frame_t *cvl_filter_min(const cvl_frame_t *frame, int k_h, int k_v);
 cvl_frame_t *cvl_filter_max(const cvl_frame_t *frame, int k_h, int k_v);
 cvl_frame_t *cvl_filter_median(const cvl_frame_t *frame, int k_h, int k_v);
+cvl_frame_t *cvl_filter_wallis(const cvl_frame_t *frame, int k_h, int k_v, 
+	double m, double s, double g, double r);
 
 cvl_frame_t *cvl_filter3d_gauss(cvl_frame_t * const *frames, 
 	int k_h, int k_v, int k_t, double sigma_h, double sigma_v, double sigma_t);
@@ -40,5 +42,7 @@ cvl_frame_t *cvl_filter3d_mean(cvl_frame_t * const *frames, int k_h, int k_v, in
 cvl_frame_t *cvl_filter3d_min(cvl_frame_t * const *frames, int k_h, int k_v, int k_t);
 cvl_frame_t *cvl_filter3d_max(cvl_frame_t * const *frames, int k_h, int k_v, int k_t);
 cvl_frame_t *cvl_filter3d_median(cvl_frame_t * const *frames, int k_h, int k_v, int k_t);
+cvl_frame_t *cvl_filter3d_wallis(cvl_frame_t * const *frames, int k_h, int k_v, int k_t,
+	double m, double s, double g, double r);
 
 #endif
