@@ -1082,6 +1082,11 @@ $ cvtool draw -u -f "Serif" -F 0.1,0.1 -j center -J center \
 @code{filter median [-3|--3d] -k|--k=@var{k}}@*
 @code{filter median [-3|--3d] -x|--k-x=@var{kx} -y|--k-y=@var{ky}
 [-t|--k-t=@var{kt}]}@*
+@code{filter wallis [-3|--3d] -k|--k=@var{k} -m|--mean=@var{m}
+-s|--stddev=@var{s} -g|--gain=@var{g} -r|--ratio=@var{r}}@*
+@code{filter wallis [-3|--3d] -x|--k-x=@var{kx} -y|--k-y=@var{ky}
+[-t|--k-t=@var{kt}] -m|--mean=@var{m} -s|--stddev=@var{s} -g|--gain=@var{g}
+-r|--ratio=@var{r}}@*
 @code{filter gauss [-3|--3d] -k|--k=@var{k}}@*
 @code{filter gauss [-3|--3d] -x|--k-x=@var{kx} -y|--k-y=@var{ky}
 [-t|--k-t=@var{kt}]}@*
@@ -1095,14 +1100,25 @@ time).
 
 The kernel size can be given for each dimension, or once for all. It will be
 (2@var{kx}+1)x(2@var{ky}+1)[x(2@var{kt}+1)]. Different values for each
-direction lead to asymmetric filtering. The gauss filter can be specified by
-the sigma value(s): the mask size will be computed so that roughly 95% of the
-mass lies within the resulting mask. It is also possible to specify both
-@var{sigma} and @var{k}.
+direction lead to asymmetric filtering. 
+
+The gauss filter can be specified by the sigma value(s): the mask size will be
+computed so that roughly 95% of the mass lies within the resulting mask. It is
+also possible to specify both @var{sigma} and @var{k}.
+
+The Wallis filter enhances contrast. Color images are processed in the
+luminance component. Refer to the literature for a description of the parameters.
 
 @example
 $ cvtool filter gauss --3d -k 3 < video.y4m > smoothed-video.y4m
 @end example
+
+@noindent 
+See also:
+@itemize @asis
+@item For the Wallis filter:@*
+W.K. Pratt. @cite{Digital Image Processing.} 2nd edition, Wiley NY 1991, pp. 307-308.
+@end itemize
 
 @node convolve
 @subsection convolve
